--- a/conf/settings.json
+++ b/conf/settings.json
@@ -1,6 +1,6 @@
 {
     "inputnodes" : 784,
-    "hiddennodes" : [350, 175],
+    "hiddennodes" : [25],
     "outputnodes" : 10,
     "learningrate" : 0.1
 }
